@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 49f6515bbef692867ded69a646c2e3adba9c371e ChangeLog
+SHA1 d285217853943568affd06c7d3aab486feb12ec1 ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 f33a524126bd793e01b2a4a92db6b833b0226a8f MANIFEST
-SHA1 6da541088f5359db3eeaffd69726ec93b344f92b META.yml
-SHA1 f9b4cf67f29d3e9dbc801c9b59ed0805a87a204b Makefile.PL
+SHA1 4f2e701a553ce62f69a289e5c22029d6c17aa859 META.yml
+SHA1 63d18fd71938061cd15ab913680d41fd1b547f38 Makefile.PL
 SHA1 fd7990a8a2e6a3211e92195eea930d61fb490eaa README
 SHA1 56058fc8d72a96f1cb02917fdf636c1abb94e51d bin/fullauto.pl
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -33,7 +33,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 943ace7bd754c89712f09357ba47014cdffc12df lib/Net/FullAuto.pm
+SHA1 33bbd2e81a70a64eb961af545c9b3e7186038458 lib/Net/FullAuto.pm
 SHA1 5ff6ce13b0ff87967726e71d0ef53ba0b3884ba7 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 1c547d9c70bbd223abf6d28018ca47076501063a lib/Net/FullAuto/Custom/README
 SHA1 11062399629ac5a8c01071ec2c876c79091f2482 lib/Net/FullAuto/Distro/fa_code.pm
@@ -47,7 +47,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk0Pzo0ACgkQdsVAdUjO9Ikl0gCghKOa9EqrXhCotxXMnBNzD1PP
-X+oAoKhT9K0b5FhtGJva1fjIf3gkoU8D
-=zCKw
+iEYEARECAAYFAk0RJcgACgkQdsVAdUjO9IlVhACgrA4UxJQOsvYo7zPO0Q1HuaiW
+PyMAnjOBYGyZYkkFaeCTHir29/YKo3CN
+=V/xH
 -----END PGP SIGNATURE-----
